i18n/en/docusaurus-plugin-content-docs/version-2.0.1/api/common-api.md
---
title: "Basic API"
sidebar_label: "Basic API"
description: ""
sidebar_position: 97
---

## 1 Init

<table>
  <tr>
    <td>API</td>
    <td>Parameter</td>
    <td>Description</td>
  </tr>
  <tr>
    <td>InitSDK</td>
    <td>(Action _initCallback = null)</td>
    <td>SDK Init<br />
    _initCallback: Initialization finished callback.
    </td>
  </tr>
</table> 

### 1.1 InitSDK
```c
TKGSDKManager.Instance.InitSDK(initCallback);
private void initCallback()
{
    Debug.Log("init callback");
}  
```

## 2 Privacy Compliance
<table>
  <tr>
    <td>API</td>
    <td>Parameter</td>
    <td>Description</td>
  </tr>
  <tr>
    <td>OpenPrivacyURL</td>
    <td>-</td>
    <td>Open privacy page in browser
    </td>
  </tr>
  <tr>
    <td>OpenUserTermURL</td>
    <td>-</td>
    <td>Open terms&Conditions in browser
    </td>
  </tr>
</table>

### 2.1 Privacy Policy
```c
TKGSDKManager.Instance.OpenPrivacyURL();
```

### 2.2 Terms & Conditions
```c
TKGSDKManager.Instance.OpenUserTermURL();
```

## 3 Advertising integration
### 3.1 InterstitialAd
<table>
  <tr>
    <td>API</td>
    <td>Parameter</td>
    <td>Description</td>
  </tr>
  <tr>
    <td>ShowInterstitialAd</td>
    <td>(TKGIVAdPositionName _adPos, Action _callback = null, IVADType _IvType = IVADType.IV1)</td>
    <td>Show Interstitial Ad<br /><br />
    _adPos: Name of interstitial ad placement.（Please define the TKGIVAdPositionName first）<br />
    _callback: Callback of ad close and playback fail.<br />
    _IvType: Type of frequency control<br />
    </td>
  </tr>
  <tr>
    <td>IsReadyInterstitialAd</td>
    <td>-</td>
    <td>Whether InterstitialAd can be displayed.<br />
    General games do not need to call by themselves.
    </td>
  </tr>
</table>

#### 3.1.1 Sample code
```c
// show interstitial ad
TKGSDKManager.Instance.ShowInterstitialAd(TKGIVAdPositionName.IV_Retry);

// is ready interstitial ad
bool isReadyIV = TKGSDKManager.Instance.IsReadyInterstitialAd();
```

### 3.2 RewardAd
<table>
  <tr>
    <td>API</td>
    <td>Parameter</td>
    <td>Description</td>
  </tr>
  <tr>
    <td>ShowRewardAd</td>
    <td>(TKGRVPositionName _adPos, Action&lt;bool&gt; _rewardCallback = null, Action _showFailedCallback = null)</td>
    <td>Show RewardAd<br /><br />
    _adPos: Name of reward ad placement.（Please define the TKGRVPositionName first）<br />
    _rewardCallback: Callback for reward.(Recommended developers issue rewards in this callback.)<br />
    _showFailedCallback: Callback of ad close and playback fail.<br />
    </td>
  </tr>
  <tr>
    <td>IsReadyRewardAd</td>
    <td>-</td>
    <td>Whether RewardAd can be displayed.<br />
    General games do not need to call by themselves.
    </td>
  </tr>
</table>

#### 3.1.1 Sample code
```c
// show reward ad
TKGSDKManager.Instance.ShowRewardAd(TKGRVPositionName.RV_GetDoubleCoin, RewardResult);

private void RewardResult(bool _bReward)
{
    Debug.Log("[ToukaSDKDemo] Reward result：" + _bReward);
}

// is ready reward ad
bool isReadyRV = TKGSDKManager.Instance. IsReadyRewardAd();
```
### 3.3 Splash Ad
To use Splash Ad, you only need to configure TOPON_OriginSplashAdId. <br />
config file: `Assets/TKGSDK/Config/Scripts/AdsSettings/StaticStringsKey_iOS.cs`

## 4 Event Tracking
### 4.1 Level Progression Events
<table>
  <tr>
    <td>API</td>
    <td>Parameter</td>
    <td>Description</td>
  </tr>
  <tr>
    <td>NotifyGameStart</td>
    <td>(int _level)  <br />
    (string _level)
    </td>
    <td>Level Start<br />
    _level: current level id.
    </td>
  </tr>
  <tr>
    <td>NotifyGameStart</td>
    <td>(int _level, bool _isSucc)<br />
    (string _level, bool _isSucc)
    </td>
    <td>Level End    <br />
    _level: current level id. <br />
    _isSucc: level result <br />
    succ: true<br />
    failed: false
    
    </td>
  </tr>
</table>

#### 4.1.1 LevelStart
```c
TKGSDKManager.Instance.NotifyGameStart(1);
TKGSDKManager.Instance.NotifyGameStart("S_1");
```

#### 4.1.2 LevelEnd
```c
TKGSDKManager.Instance.NotifyGameEnd(1, true); 
TKGSDKManager.Instance.NotifyGameEnd("S_1", false); 
```

### 4.2 Custom Event

<table>
  <tr>
    <td>API</td>
    <td>Parameter</td>
    <td>Description</td>
  </tr>
  <tr>
    <td>LogEvent</td>
    <td>(string _eventSort) </td>
    <td>Report game tracking event <br />
    (the number of parameters is different) </td>
  </tr>
  <tr>
    <td>LogEvent</td>
    <td>(string _eventSort, string _key, string _value) </td>
    <td>same as above </td>
  </tr>
  <tr>
    <td>LogEvent</td>
    <td>(string _eventSort, string _key01, string _value01, string _key02, string _value02) </td>
    <td>same as above </td>
  </tr>
  <tr>
    <td>LogEvent</td>
    <td>(string _eventSort, Dictionary&lt;string, string&gt; _eventDic = null) </td>
    <td>same as above </td>
  </tr>
</table>

#### 4.2.1 Sample code
```c
TKGSDKManager.Instance.LogEvent("click_Skin");
TKGSDKManager.Instance.LogEvent("get_gift", "stage_level", "1");
TKGSDKManager.Instance.LogEvent("stage_end", "stage_level", "1", "stage_status", "success");
```

